# growlight

./: .drone.yml  .gitignore  CMakeLists.txt  COPYING  Makefile.am  README  README.md  configure.ac
.github/: FUNDING.yml
.github/workflows/: ubuntu_test.yml
debian/: 9EA957D484A4266A.asc  changelog  control  copyright  rules  watch
doc/: release-checklist
doc/man/man8/: growlight-curses.xml  growlight-readline.8.md  growlight-readline.8.xml  growlight-readline.xml  growlight-tty.xml  growlight.8.md  growlight.8.xml  growlight.ent  growlight.xml
libzfs/: libzfs.h
src/: aggregate.c  aggregate.h  apm.c  apm.h  crc32.c  crc32.h  crypt.c  crypt.h  dm.c  dm.h  dmi.c  dmi.h  fs.c  fs.h  gpt.c  gpt.h  growlight.c  growlight.h  health.c  health.h  libblkid.c  libblkid.h  loop.c  loop.h  mbr.c  mbr.h  mdadm.c  mdadm.h  mmap.c  mmap.h  mounts.c  mounts.h  msdos.c  msdos.h  ncurses.c  ncurses.h  notcurses.c  notcurses.h  notui-aggregate.c  nvme.c  (+39 more)
src/notcurses/: notcurses-ui.h  notcurses.c  notui-aggregate.c  notui-aggregate.h
src/readline/: readline.c
test/: growlight.c
tests/: gpt.cpp  main.cpp  main.h
tools/: debrelease  release
